testdata/step_15/valid/later_decl.c
foo(a) {
    return a + 1;
}

main() {
    return foo(4);
}

foo(a);