testdata/step_15/invalid/declaration_mismatch.c
foo(a);

main() {
    return 5;
}

foo(a, b) {
    return 4;
}